# hamming_code

./: CMakeLists.txt  README.md
include/: common.h
src/: CMakeLists.txt  ascii2hamming.c  ascii2hamming.h  hamming2ascii.c  hamming2ascii.h
tests/: CMakeLists.txt
